//
//  Enumerations.swift
//  DiveLane
//
//  Created by NewUser on 18/09/2018.
//  Copyright © 2018 Matter Inc. All rights reserved.
//

import Foundation

enum AppState {
    case ETH
    case Plasma
}

enum ManagerType {
    case Wallets
    case Tokens
}
