...
        } catch {
            updateContactsList(with: [])
        }
    }

    func addContactBarItem() -> UIBarButtonItem {
        let addButton = UIBarButtonItem(title: "Add", style: .plain, target: self, action: #selector(addContact))
        return addButton
    }

    @objc func addContact() {
        self.searchController.searchBar.endEditing(true)
        let addContactController = AddContactController()
...
