//
//  DiveLaneUITests.swift
//  DiveLaneUITests
//
//  Created by NewUser on 26/09/2018.
//  Copyright © 2018 Matter Inc. All rights reserved.
//

import XCTest

class DiveLaneUITests: XCTestCase {

    override func setUp() {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        XCUIApplication().launch()
    }

    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() {
//        let app = XCUIApplication()
//        setupSnapshot(app)
//        app.launch()
//        snapshot("MainScreen")
//        let walletsNavigationBar = app.navigationBars["Wallets"]
//        walletsNavigationBar.buttons["Add"].tap()
//        snapshot("Wallets")
//        let tablesQuery = app.tables
//        tablesQuery.buttons["Info"].tap()
//        snapshot("WalletInfo")
//        app.navigationBars["Wallet"].buttons["Wallets"].tap()
//        walletsNavigationBar.buttons["Wallets"].tap()
//        tablesQuery.buttons["+"].tap()
//        tablesQuery.searchFields["Search"].tap()
//        snapshot("TokenSearch")
    }

}
